--- a/flex.html
+++ b/flex.html
@@ -9,23 +9,27 @@
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="SitePoint">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="css/flex.css?v=1.0">
 </head>
 
 <body>
-    <div>Behold the grid</div>
-    <div class="grid">
-        <div class="div1">div1</div>
-        <div class="div2">div2</div>
-        <div class="div3">div3</div>
-        <div class="div1">div1</div>
-        <div class="div2">div2</div>
-        <div class="div3">div3</div>
+    <div>Flexbox</div>
+    <div class="flex">
         <div class="div1">div1</div>
         <div class="div2">div2</div>
         <div class="div3">div3</div>
     </div>
-    <div>check out <a href="/flex.html">flex version</a></div>
+    <div class="flex">
+        <div class="div1">div1</div>
+        <div class="div2">div2</div>
+        <div class="div3">div3</div>
+    </div>
+    <div class="flex">
+        <div class="div1">div1</div>
+        <div class="div2">div2</div>
+        <div class="div3">div3</div>
+    </div>
+    <div>check out <a href="/">grid version</a></div>
 </body>
 
 </html>
