--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
     <div class="grid">
         <div class="div1">div1</div>
         <div class="div2">div2</div>
-        <div class="div3">div3</div>
+        <div class="div3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+            deserunt mollit anim id est laborum.</div>
         <div class="div1">div1</div>
-        <div class="div2">div2</div>
+        <div class="div2">div2<br />
+            with<br />
+            some<br />
+            more rows<br />
+        </div>
         <div class="div3">div3</div>
         <div class="div1">div1</div>
         <div class="div2">div2</div>
