--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
         <div class="div1">div1</div>
         <div class="div2">div2</div>
         <div class="div3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-            dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</div>
+            labore et dolore magna aliqua.</div>
         <div class="div1">div1</div>
         <div class="div2">div2<br />
             with<br />
