--- a/index.html
+++ b/index.html
@@ -17,14 +17,9 @@
     <div class="grid">
         <div class="div1">div1</div>
         <div class="div2">div2</div>
-        <div class="div3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore et dolore magna aliqua.</div>
+        <div class="div3">div3</div>
         <div class="div1">div1</div>
-        <div class="div2">div2<br />
-            with<br />
-            some<br />
-            more rows<br />
-        </div>
+        <div class="div2">div2</div>
         <div class="div3">div3</div>
         <div class="div1">div1</div>
         <div class="div2">div2</div>
