responsive with grid areas

--- a/index.html
+++ b/index.html
@@ -14,16 +14,21 @@
 
 <body>
     <div>Behold the grid</div>
-    <div class="grid">
-        <div class="div1">div1</div>
-        <div class="div2">div2</div>
-        <div class="div3">div3</div>
-        <div class="div1">div1</div>
-        <div class="div2">div2</div>
-        <div class="div3">div3</div>
-        <div class="div1">div1</div>
-        <div class="div2">div2</div>
-        <div class="div3">div3</div>
+    <div class="page">
+        <div class="header">HEADER</div>
+        <div class="navigation">
+            <ul>
+                <li>nav1</li>
+                <li>nav2</li>
+                <li>nav3</li>
+                <li>nav4</li>
+                <li>nav5</li>
+            </ul>
+        </div>
+        <div class="content">
+            <img src="https://source.unsplash.com/500x500/?nature,water" />
+        </div>
+        <div class="footer">FOOTER</div>
     </div>
     <div>check out <a href="/flex.html">flex version</a></div>
 </body>
